--- a/public/probnatimeline.html
+++ b/public/probnatimeline.html
@@ -13,7 +13,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
       <style>
         body {
-  background-color: #000;
+  
 
   overflow-x: hidden;
 }
@@ -367,8 +367,7 @@ img {
    <body>
     <div class="ag-timeline-block">
         <div class="ag-timeline_title-box">
-          <div class="ag-timeline_tagline">Timeline</div>
-          <div class="ag-timeline_title">No Flex</div>
+          <div class="ag-timeline_tagline">Линия на времето</div>
         </div>
         <section class="ag-section">
           <div class="ag-format-container">
@@ -380,10 +379,10 @@ img {
                 <div class="js-timeline_item ag-timeline_item">
                   <div class="ag-timeline-card_box">
                     <div class="js-timeline-card_point-box ag-timeline-card_point-box">
-                      <div class="ag-timeline-card_point">2021</div>
+                      <div class="ag-timeline-card_point">2017</div>
                     </div>
                     <div class="ag-timeline-card_meta-box">
-                      <div class="ag-timeline-card_meta">Season 13</div>
+                      <div class="ag-timeline-card_meta">Открит е най-старият зъб в света</div>
                     </div>
                   </div>
                   <div class="ag-timeline-card_item">
@@ -612,6 +611,62 @@ img {
                     <div class="ag-timeline-card_arrow"></div>
                   </div>
                 </div>
+
+                <div class="js-timeline_item ag-timeline_item">
+                    <div class="ag-timeline-card_box">
+                      <div class="ag-timeline-card_meta-box">
+                        <div class="ag-timeline-card_meta">Season 6</div>
+                      </div>
+                      <div class="js-timeline-card_point-box ag-timeline-card_point-box">
+                        <div class="ag-timeline-card_point">2017</div>
+                      </div>
+                    </div>
+                    <div class="ag-timeline-card_item">
+                      <div class="ag-timeline-card_inner">
+                        <div class="ag-timeline-card_img-box">
+                          <img src="https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/images/img-6.png" class="ag-timeline-card_img" width="640" height="360" alt="" />
+                        </div>
+                        <div class="ag-timeline-card_info">
+                          <div class="ag-timeline-card_title">Season 6</div>
+                          <div class="ag-timeline-card_desc">
+                            Vivamus elementum semper nisi. Aenean vulputate eleifend
+                            tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+                            Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra
+                            nulla ut metus varius laoreet. Quisque rutrum.
+                          </div>
+                        </div>
+                      </div>
+                      <div class="ag-timeline-card_arrow"></div>
+                    </div>
+                  </div>
+
+                  <div class="js-timeline_item ag-timeline_item">
+                    <div class="ag-timeline-card_box">
+                      <div class="ag-timeline-card_meta-box">
+                        <div class="ag-timeline-card_meta">Season 6</div>
+                      </div>
+                      <div class="js-timeline-card_point-box ag-timeline-card_point-box">
+                        <div class="ag-timeline-card_point">2017</div>
+                      </div>
+                    </div>
+                    <div class="ag-timeline-card_item">
+                      <div class="ag-timeline-card_inner">
+                        <div class="ag-timeline-card_img-box">
+                          <img src="https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/images/img-6.png" class="ag-timeline-card_img" width="640" height="360" alt="" />
+                        </div>
+                        <div class="ag-timeline-card_info">
+                          <div class="ag-timeline-card_title">Season 6</div>
+                          <div class="ag-timeline-card_desc">
+                            Vivamus elementum semper nisi. Aenean vulputate eleifend
+                            tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+                            Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra
+                            nulla ut metus varius laoreet. Quisque rutrum.
+                          </div>
+                        </div>
+                      </div>
+                      <div class="ag-timeline-card_arrow"></div>
+                    </div>
+                  </div>
       
                 <div class="js-timeline_item ag-timeline_item">
                   <div class="ag-timeline-card_box">
@@ -844,6 +899,7 @@ img {
 
         
       </script>
+      <script src="footer.js"></script>
    </body>
 </html>
 </body>
