--- a/public/contact.html
+++ b/public/contact.html
@@ -13,7 +13,7 @@
 
 <header>
     <menu-nav></menu-nav>
-    <h1>Контакти</h1>
+    <h1 style="color:#4e5e72;">Контакти</h1>
 </header>
 <div class="navigation">
     <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
@@ -109,6 +109,15 @@ if (form) {
     });
 }
 
+</script>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+      // Get the current page color from the body's style attribute
+      const currentPageColor = getComputedStyle(document.body).getPropertyValue('--page-color');
+
+      // Set the background color of the menu button to the current page color
+      document.getElementById('menuButton').style.backgroundColor = currentPageColor;
+    });
 </script>
 <main-footer></main-footer>
 <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
