--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -50,7 +50,7 @@
           <img class="profile-picture" src="profile1.jpg" alt="Profile Picture">
           <div class="profile-name">Иван Ташев</div>
           <div class="profile-job">Software Engineer</div>
-          <div class="social-icons">
+          <div class="social-icons" style="text-align: center;">
             <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
@@ -61,7 +61,7 @@
           <img class="profile-picture" src="profile2.jpg" alt="Profile Picture">
           <div class="profile-name">Евгени Генчев</div>
           <div class="profile-job">Software Engineer</div>
-          <div class="social-icons">
+          <div class="social-icons" style="text-align: center;">
             <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
@@ -72,7 +72,7 @@
           <img class="profile-picture" src="profile3.jpg" alt="Profile Picture">
           <div class="profile-name">Христо Кичев</div>
           <div class="profile-job">Нищо неправещ</div>
-          <div class="social-icons">
+          <div class="social-icons" style="text-align: center;">
             <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
