--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -85,6 +85,8 @@
             width: 100%;
             text-align: center;"></main-footer>  
 <script src="footer.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9046306933432086"
+     crossorigin="anonymous"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </body>
 </html>
