--- a/public/contact.html
+++ b/public/contact.html
@@ -96,8 +96,9 @@ if (form) {
             var refreshButton = document.createElement("button");
             refreshButton.textContent = "Refresh";
             refreshButton.style.position="absolute";
-            refreshButton.style.top="12cm";
-            refreshButton.style.left="18.4cm";
+            /*refreshButton.style.top="12cm";
+            refreshButton.style.left="16.5cm";*/
+            refreshButton.style.textAlign="center";
             refreshButton.classList.add("refresh-button");
             refreshButton.addEventListener("click", function() {
                 location.reload();
