--- a/public/artifacts.html
+++ b/public/artifacts.html
@@ -11,6 +11,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         </head>
         <body>
+          <header>Артефакти</header>
           <div class="navigation" id="navigation">
             <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
             <label for="nav-toggle" class="navigation__button">
