--- a/public/contact.html
+++ b/public/contact.html
@@ -13,7 +13,7 @@
 
 <header>
     <menu-nav></menu-nav>
-    <h1 style="color:#4e5e72;">Контакти</h1>
+    <h1 style="color:white">Контакти</h1>
 </header>
 <div class="navigation">
     <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
