--- a/public/artifacts.html
+++ b/public/artifacts.html
@@ -39,7 +39,7 @@
           </ul>
         </nav>
         </div>
-        <div id="artifacts"></div>  
+        <div class="artifact" id="artifacts"></div>  
         <div id="mantas"></div>
         <script class="bot" async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
             <main-footer style="position: fixed;left: 0;
