--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,8 @@
     <ul class="inline-block">
       <li class="pull-left active"><a href="#" id="ancient_tooth_anchor" data-direction="front">Home</a></li>
       <li class="pull-left"><a href="#" id="caves_anchor"  data-direction="back">Пещерите</a></li>
-      <li class="pull-left"><a href="#" id="varna_anchor" data-direction="top">Варна</a></li>
-      <li class="pull-left"><a href="#" id="alphabet_anchor" data-direction="right">Писмеността</a></li>
+      <li class="pull-left"><a href="#" id="varna_anchor" data-direction="bottom">Варна</a></li>
+      <li class="pull-left"><a href="#" id="alphabet_anchor" data-direction="left">Писмеността</a></li>
       <div class="clearfix"></div>
     </ul>
   </nav>
@@ -100,7 +100,17 @@
   </div>
       <main-footer></main-footer>
     </section>
-    <section class="page face top" id="varna">
+    <section class="page face top" id="blog">
+      <div class="act-table text-center">
+        <div class="act-table-cell ver-middle"></div>
+      </div>
+    </section>
+    <section class="page face right" id="article">
+      <div class="act-table text-center">
+        <div class="act-table-cell ver-middle"></div>
+      </div>
+      </section>
+    <section class="page face bottom" id="varna">
       <div class="act-table text-center">
         <div class="act-table-cell ver-middle">
           <div class="jumbotron" id="varna_jumbotron">
@@ -118,7 +128,7 @@
       </div>
     </section>
     <!--Contact-->
-    <section class="page face right" id="alphabet">
+    <section class="page face left" id="alphabet">
       <div class="act-table text-center">
         <div class="act-table-cell-ver-middle">
           <div class="jumbotron" id="alphabet_jumbotron">
@@ -132,6 +142,7 @@
       </div>
       <main-footer></main-footer>
     </section>
+    
   </div>
 </div>
 <!-- partial -->
